EastSussex. z-index fixes for IE7
The #map_box div wasn't clickable, so we had to reset its z-index from the
broken -1 to 0.  IE7 doesn't like setting z-index to 0 in javascript (as it's a
falsy value) so instead we set the z-index of parent and sibling elements (body
and site-header) to 1 to make sure they are visible.

position:relative in base.scss is to make sure that the header is now
shown (similar to @6296cb33)

See https://github.com/mysociety/FixMyStreet-Commercial/issues/639

--- a/web/cobrands/eastsussex/base.scss
+++ b/web/cobrands/eastsussex/base.scss
@@ -46,6 +46,7 @@ h1.main {
 }
 
 #site-header {
+    position: relative;
     background: $primary;
     height: 76px;
     border-top-width: 4px;
@@ -223,4 +224,13 @@ styling, but this doesn't dtrt with span, so adding ourselves */
 
 #geolocate_link {
     font-size: 1.0em;
+}
+
+.ie6, .ie7 {
+    body {
+        z-index: 1;
+    }
+    #site-header {
+        z-index: 1;
+    }
 }
